tests/ui/feature-gates/feature-gate-yeet_expr-in-cfg.stderr
error[E0658]: `do yeet` expression is experimental
  --> $DIR/feature-gate-yeet_expr-in-cfg.rs:6:9
   |
LL |         do yeet
   |         ^^^^^^^
   |
   = note: see issue #96373 <https://github.com/rust-lang/rust/issues/96373> for more information
   = help: add `#![feature(yeet_expr)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: `do yeet` expression is experimental
  --> $DIR/feature-gate-yeet_expr-in-cfg.rs:14:5
   |
LL |     do yeet "hello";
   |     ^^^^^^^^^^^^^^^
   |
   = note: see issue #96373 <https://github.com/rust-lang/rust/issues/96373> for more information
   = help: add `#![feature(yeet_expr)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0658`.
